# finance-tracker-api

./: claude-suggestion.txt  spec.md
backend/: README.md  pyproject.toml  pyrightconfig.json  requirements.txt  vercel.json
backend/ai_agent/: __init__.py  route.py  tools.py
backend/app/: __init__.py  config.py  database.py  exceptions.py  main.py
backend/auth/: __init__.py  dependency.py  security.py
backend/models/: __init__.py  budget_model.py  category_model.py  expense_model.py  user_model.py
backend/routes/: __init__.py  admin.py  budget.py  category.py  expense.py  user.py
